--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,2 +1,8 @@
 ---
-# handlers file for insspb.odoo
+
+- name: Odoo | Handlers | Restart Odoo
+  service:
+    name: "{{ item.odoo_service | default(default_odoo_service) }}"
+    state: restarted
+  when: "{{ (item.odoo_init | default(default_odoo_init)) == True }}"
+  with_items: "{{ odoo_instances }}"
