--- a/vars/main.yml
+++ b/vars/main.yml
@@ -42,6 +42,7 @@ odoo_debian_packages:
     - python-passlib
     - python-babel
     - python-gevent
+    - node-less
 
 odoo_pypi_packages:
     - psycogreen
