use normal remote host without checks

--- a/templates/odoo-9.0.conf
+++ b/templates/odoo-9.0.conf
@@ -3,7 +3,7 @@ addons_path = {{ (item.odoo_config_addons_path | default(default_odoo_config_add
 admin_passwd = {{ item.odoo_config_admin_passwd | default(default_odoo_config_admin_passwd) }}
 csv_internal_sep = {{ item.odoo_config_csv_internal_sep | default(default_odoo_config_csv_internal_sep) }}
 data_dir = {{ item.odoo_config_data_dir | default(default_odoo_config_data_dir) }}
-db_host = {{ ( item.odoo_config_db_host | default(default_odoo_config_db_host) ) not in [False, 'localhost', '127.0.0.1'] and hostvars.get( ( item.odoo_config_db_host | default(default_odoo_config_db_host) ), {}).get('ansible_ssh_host') or ( item.odoo_config_db_host | default(default_odoo_config_db_host) ) }}
+db_host = {{ item.odoo_config_db_host | default(default_odoo_config_db_host) }}
 db_maxconn = {{ item.odoo_config_db_maxconn | default(default_odoo_config_db_maxconn) }}
 db_name = {{ item.odoo_config_db_name | default(default_odoo_config_db_name) }}
 db_password = {{ item.odoo_config_db_passwd | default(default_odoo_config_db_passwd) }}
