Db filter miss symbol.

--- a/templates/odoo-9.0.conf
+++ b/templates/odoo-9.0.conf
@@ -10,7 +10,7 @@ db_password = {{ item.odoo_config_db_passwd | default(default_odoo_config_db_pas
 db_port = {{ item.odoo_config_db_port | default(default_odoo_config_db_port) }}
 db_template = {{ item.odoo_config_db_template | default(default_odoo_config_db_template) }}
 db_user = {{ item.odoo_config_db_user | default(default_odoo_config_db_user) }}
-dbfilter = {{ item.odoo_config_dbfilter | default(default_odoo_config_dbfilter) }}
+db_filter = {{ item.odoo_config_dbfilter | default(default_odoo_config_dbfilter) }}
 debug_mode = {{ item.odoo_config_debug_mode | default(default_odoo_config_debug_mode) }}
 demo = {}
 dev_mode = False
