--- a/vars/main.yml
+++ b/vars/main.yml
@@ -47,6 +47,7 @@ odoo_debian_packages:
 
 odoo_pypi_packages:
     - psycogreen
+    - ofxparse
 
 odoo_wkhtmltox_urls:
     - http://download.gna.org/wkhtmltopdf/0.12/{{ odoo_wkhtmltox_version }}/wkhtmltox-{{ odoo_wkhtmltox_version }}_linux-{{ ansible_distribution_release }}-{{ odoo_debian_arch }}.deb
